tests/e2e/function_return_service_without_type.error
Error: syntax error in story at line 2, column None

2|      return my_random_service get_integer
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

E0110: Function has no return output defined. Only `return` is allowed.
