tests/e2e/function_return_service_without_type.story
function random
    return my_random_service get_integer
